add avro test and reshape existing e2e setup