@@ -3,11 +3,13 @@ package com.github.hpgrahsl.kroxylicious.filters.kryptonite.e2e;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.github.dockerjava.api.model.ExposedPort;
+import com.github.dockerjava.api.model.HostConfig;
+import com.github.dockerjava.api.model.Ports;
+
 import io.confluent.kafka.schemaregistry.client.CachedSchemaRegistryClient;
 import io.confluent.kafka.schemaregistry.client.SchemaRegistryClient;
 import io.confluent.kafka.schemaregistry.json.JsonSchema;
-import org.apache.kafka.clients.admin.AdminClient;
-import org.apache.kafka.clients.admin.NewTopic;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
@@ -15,9 +17,13 @@ import org.apache.kafka.clients.producer.KafkaProducer;
 import org.apache.kafka.clients.producer.ProducerRecord;
 import org.apache.kafka.common.TopicPartition;
 import org.junit.jupiter.api.Test;
+import org.testcontainers.containers.GenericContainer;
+import org.testcontainers.containers.wait.strategy.Wait;
+import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
+import org.testcontainers.utility.DockerImageName;
+import org.testcontainers.utility.MountableFile;
 
-import java.nio.ByteBuffer;
 import java.time.Duration;
 import java.util.Base64;
 import java.util.List;
@@ -26,14 +32,20 @@ import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatCode;
 
 /**
- * End-to-end roundtrip tests for the Kroxylicious Kryptonite filter (JSON_SR format).
+ * End-to-end roundtrip tests for the Kroxylicious Kryptonite filter (JSON_SR
+ * format).
  *
- * <p>Container topology (managed by {@link AbstractKroxyliciousE2E_IT}):
- * Kafka + Schema Registry + Kroxylicious proxy — all in Docker via Testcontainers.
+ * <p>
+ * Container topology (managed by {@link AbstractKroxyliciousBaseIT}):
+ * Kafka + Schema Registry + Kroxylicious proxy — all in Docker via
+ * Testcontainers.
  *
- * <p>Test payload schema ({@code $schema: draft-07}):
+ * <p>
+ * Test payload schema ({@code $schema: draft-07}):
+ * 
  * <pre>
  * {
  *   "firstname": string   — OBJECT mode encryption (string)
@@ -45,10 +57,12 @@ import static org.assertj.core.api.Assertions.assertThat;
  * }
  * </pre>
  *
- * <p>Activate with: {@code -De2e.tests=true}
+ * <p>
+ * Activate with: {@code -De2e.tests=true}
  */
 @Testcontainers
-class JsonSrProxyRoundTripE2E_IT extends AbstractKroxyliciousE2E_IT {
+@SuppressWarnings("resource")
+class JsonSrProxyRoundTripIT extends AbstractKroxyliciousBaseIT {
 
     private static final ObjectMapper MAPPER = new ObjectMapper();
 
@@ -84,20 +98,53 @@ class JsonSrProxyRoundTripE2E_IT extends AbstractKroxyliciousE2E_IT {
             }
             """;
 
+    @Container
+    protected static final GenericContainer<?> KROXYLICIOUS = new GenericContainer<>(
+            DockerImageName.parse(KROXYLICIOUS_IMAGE))
+            .withNetwork(NETWORK)
+            .withNetworkAliases("kroxylicious")
+            .dependsOn(KAFKA, SCHEMA_REGISTRY)
+            .withCopyFileToContainer(
+                    MountableFile.forHostPath(
+                            "/Users/hpgrahsl/github/hpgrahsl/kryptonite-for-kafka/kroxylicious-filter-kryptonite/target/kroxylicious-filter-kryptonite-0.1.0-SNAPSHOT.jar"),
+                    "/opt/kroxylicious/plugins/kroxylicious-filter-kryptonite.jar")
+            .withCopyFileToContainer(
+                    MountableFile.forClasspathResource("e2e-proxy-config-jsonsr.yaml"),
+                    "/opt/kroxylicious/config/e2e-config.yaml")
+            .withEnv("KROXYLICIOUS_CLASSPATH", "/opt/kroxylicious/plugins/*")
+            .withEnv("JAVA_OPTIONS",
+                    "--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED")
+            .withCreateContainerCmdModifier(cmd -> {
+                HostConfig hc = cmd.getHostConfig() != null ? cmd.getHostConfig()
+                        : HostConfig.newHostConfig();
+                Ports portBindings = new Ports();
+                portBindings.bind(ExposedPort.tcp(PROXY_BOOTSTRAP_PORT),
+                        Ports.Binding.bindPort(PROXY_BOOTSTRAP_PORT));
+                portBindings.bind(ExposedPort.tcp(PROXY_BROKER_PORT),
+                        Ports.Binding.bindPort(PROXY_BROKER_PORT));
+                portBindings.bind(ExposedPort.tcp(PROXY_BROKER_PORT + 1),
+                        Ports.Binding.bindPort(PROXY_BROKER_PORT + 1));
+                cmd.withHostConfig(hc.withPortBindings(portBindings));
+            })
+            // .withLogConsumer(new Slf4jLogConsumer(LoggerFactory.getLogger("e2e.kroxylicious")))
+            .withCommand("--config", "/opt/kroxylicious/config/e2e-config.yaml")
+            .waitingFor(Wait.forLogMessage(".*Kroxylicious is started.*\\n", 1)
+                    .withStartupTimeout(Duration.ofSeconds(30)));
+
     /**
      * Full proxy roundtrip for OBJECT-mode fields.
      *
-     * <p>Produces the payload through the proxy (encrypt), consumes through the proxy (decrypt),
-     * and asserts that {@code firstname}, {@code lastname}, {@code age}, and {@code address}
+     * <p>
+     * Produces the payload through the proxy (encrypt), consumes through the proxy
+     * (decrypt),
+     * and asserts that {@code firstname}, {@code lastname}, {@code age}, and
+     * {@code address}
      * are restored to their original values.
      */
     @Test
     void objectModeRoundTrip() throws Exception {
-        String topic = "e2e-" + UUID.randomUUID();
+        String topic = "e2e-jsonsr-" + UUID.randomUUID();
         createTopic(topic);
-
-        //FIXME: schema registry container wait for strategy not working correctly in base class ???
-        Thread.sleep(5_000);
 
         int schemaId;
         try (SchemaRegistryClient srClient = new CachedSchemaRegistryClient(schemaRegistryURL(), 100)) {
@@ -118,17 +165,17 @@ class JsonSrProxyRoundTripE2E_IT extends AbstractKroxyliciousE2E_IT {
     /**
      * Full proxy roundtrip for ELEMENT-mode fields.
      *
-     * <p>Produces the payload through the proxy (encrypt each element/value individually),
-     * consumes through the proxy (decrypt), and asserts that {@code tags} array elements
+     * <p>
+     * Produces the payload through the proxy (encrypt each element/value
+     * individually),
+     * consumes through the proxy (decrypt), and asserts that {@code tags} array
+     * elements
      * and {@code scores} map values are fully restored.
      */
     @Test
     void elementModeRoundTrip() throws Exception {
-        String topic = "e2e-" + UUID.randomUUID();
+        String topic = "e2e-jsonsr-" + UUID.randomUUID();
         createTopic(topic);
-
-        //FIXME: schema registry container wait for strategy not working correctly in base class ???
-        Thread.sleep(5_000);
 
         int schemaId;
         try (SchemaRegistryClient srClient = new CachedSchemaRegistryClient(schemaRegistryURL(), 100)) {
@@ -153,18 +200,19 @@ class JsonSrProxyRoundTripE2E_IT extends AbstractKroxyliciousE2E_IT {
     /**
      * Verifies that fields are actually encrypted at rest in Kafka.
      *
-     * <p>Produces through the proxy (which encrypts), then consumes <em>directly from Kafka</em>
-     * (bypassing the proxy) to assert that all configured fields are stored as opaque encrypted
-     * strings — not their original values. Unencrypted fields (none in this payload) would
+     * <p>
+     * Produces through the proxy (which encrypts), then consumes <em>directly from
+     * Kafka</em>
+     * (bypassing the proxy) to assert that all configured fields are stored as
+     * opaque encrypted
+     * strings — not their original values. Unencrypted fields (none in this
+     * payload) would
      * pass through unchanged.
      */
     @Test
     void encryptedAtRest() throws Exception {
-        String topic = "e2e-" + UUID.randomUUID();
+        String topic = "e2e-jsonsr-" + UUID.randomUUID();
         createTopic(topic);
-
-        //FIXME: schema registry container wait for strategy not working correctly in base class ???
-        Thread.sleep(5_000);
 
         int schemaId;
         try (SchemaRegistryClient srClient = new CachedSchemaRegistryClient(schemaRegistryURL(), 100)) {
@@ -177,17 +225,21 @@ class JsonSrProxyRoundTripE2E_IT extends AbstractKroxyliciousE2E_IT {
         // Read the raw (encrypted) record directly from Kafka, bypassing the proxy
         ObjectNode atRest = consumeDirect(topic);
 
-        // OBJECT-mode fields must be encrypted strings (not their original types/values)
+        // OBJECT-mode fields must be encrypted strings (not their original
+        // types/values)
         assertEncryptedString(atRest, "firstname", "Alice");
         assertEncryptedString(atRest, "lastname", "Smith");
-        // age was an integer; after OBJECT-mode encryption it becomes an encrypted string
+        // age was an integer; after OBJECT-mode encryption it becomes an encrypted
+        // string
         assertThat(atRest.get("age").isTextual()).isTrue();
         assertThat(atRest.get("age").asText()).isNotEqualTo("30");
-        // address was an object; after OBJECT-mode encryption it becomes an encrypted string
+        // address was an object; after OBJECT-mode encryption it becomes an encrypted
+        // string
         assertThat(atRest.get("address").isTextual()).isTrue();
         assertThat(atRest.get("address").asText()).doesNotContain("Main St");
 
-        // ELEMENT-mode array: every element must be an encrypted string, not the original value
+        // ELEMENT-mode array: every element must be an encrypted string, not the
+        // original value
         JsonNode tagsAtRest = atRest.get("tags");
         assertThat(tagsAtRest.isArray()).isTrue();
         for (JsonNode element : tagsAtRest) {
@@ -195,7 +247,8 @@ class JsonSrProxyRoundTripE2E_IT extends AbstractKroxyliciousE2E_IT {
             assertThat(List.of("admin", "user", "readonly")).doesNotContain(element.asText());
         }
 
-        // ELEMENT-mode object: every map value must be an encrypted string, not the original int
+        // ELEMENT-mode object: every map value must be an encrypted string, not the
+        // original int
         JsonNode scoresAtRest = atRest.get("scores");
         assertThat(scoresAtRest.isObject()).isTrue();
         scoresAtRest.properties().forEach(entry -> {
@@ -208,20 +261,8 @@ class JsonSrProxyRoundTripE2E_IT extends AbstractKroxyliciousE2E_IT {
     // Helpers
     // -------------------------------------------------------------------------
 
-    private static void createTopic(String topic) throws Exception {
-        try (AdminClient admin = AdminClient.create(Map.of(
-                "bootstrap.servers", directKafkaBootstrap()))) {
-            admin.createTopics(List.of(new NewTopic(topic, 1, (short) 1)))
-                    .all().get(30, TimeUnit.SECONDS);
-        }
-    }
-
     private static void produceViaProxy(String topic, int schemaId, ObjectNode payload) throws Exception {
         produceTo(topic, schemaId, payload, kroxyliciousBootstrap());
-    }
-
-    private static void produceDirect(String topic, int schemaId, ObjectNode payload) throws Exception {
-        produceTo(topic, schemaId, payload, directKafkaBootstrap());
     }
 
     private static void produceTo(String topic, int schemaId, ObjectNode payload, String bootstrap) throws Exception {
@@ -239,7 +280,7 @@ class JsonSrProxyRoundTripE2E_IT extends AbstractKroxyliciousE2E_IT {
     }
 
     private static ObjectNode consumeDirect(String topic) throws Exception {
-        return consumeFrom(topic, directKafkaBootstrap());
+        return consumeFrom(topic, kafkaBootstrap());
     }
 
     private static ObjectNode consumeFrom(String topic, String bootstrap) throws Exception {
@@ -265,34 +306,18 @@ class JsonSrProxyRoundTripE2E_IT extends AbstractKroxyliciousE2E_IT {
         }
     }
 
-    /** Confluent SR wire format: magic byte (0x00) + 4-byte big-endian schema ID + payload. */
-    private static byte[] toWireBytes(int schemaId, byte[] payload) {
-        ByteBuffer buf = ByteBuffer.allocate(1 + 4 + payload.length);
-        buf.put((byte) 0x00);
-        buf.putInt(schemaId);
-        buf.put(payload);
-        return buf.array();
-    }
-
-    /** Strips the 5-byte Confluent SR wire prefix and returns the raw JSON payload. */
-    private static byte[] stripWirePrefix(byte[] wireBytes) {
-        byte[] payload = new byte[wireBytes.length - 5];
-        System.arraycopy(wireBytes, 5, payload, 0, payload.length);
-        return payload;
-    }
-
-    /** Asserts that a field is an encrypted string (textual, Base64-decodable, not the original value). */
+    /**
+     * Asserts that a field is an encrypted string (textual, Base64-decodable, not
+     * the original value).
+     */
     private static void assertEncryptedString(ObjectNode node, String fieldName, String originalValue) {
         JsonNode field = node.get(fieldName);
         assertThat(field).as("field '%s' should be present", fieldName).isNotNull();
         assertThat(field.isTextual()).as("field '%s' should be a string (encrypted)", fieldName).isTrue();
         assertThat(field.asText()).as("field '%s' should not equal original value", fieldName)
                 .isNotEqualTo(originalValue);
-        // Kryptonite stores encrypted fields as Base64; verify it decodes without error
-        assertThat(Base64.getDecoder().decode(
-                // strip Tink prefix bytes before Base64 decoding if needed —
-                // just check the field is non-empty and not the original value
-                field.asText().isEmpty() ? "AA==" : "AA=="))
-                .isNotNull();
+        assertThatCode(() -> Base64.getDecoder().decode(field.asText()))
+                .as("field '%s' should be valid Base64 but got: %s ", fieldName, field.asText())
+                .doesNotThrowAnyException();
     }
 }
